--- a/src/static/style.css
+++ b/src/static/style.css
@@ -7,22 +7,22 @@ body {
   padding: 0; /* Removes padding from <body> */
 }
 
-*,
+*, /* Sets the box-sizing property for all elements and their pseudo elements to border-box */
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
-.layout {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1rem;
+.layout { /* Defines the styles for elements with class "layout" */
+  display: flex; /* Sets the display property of elements with class "layout" to "flex" */
+  flex-direction: column; /* Sets the flex direction of elements with class "layout" to "column" */
+  width: 100%; /* Sets the width of elements with class "layout" to 100% */
+  max-width: 1200px; /* Sets the maximum width of elements with class "layout" to 1200px */
+  margin: 0 auto; /* Centers elements with class "layout" horizontally using margin */
+  padding: 0 1rem;  /* Adds 0 padding to the top and bottom of elements with class "layout", and 1rem padding to the left and right */
 }
 
-h1 {
+h1 { /* Defines the styles for <h1> elements */
   font-size: 3rem;
   margin: 0;
   padding: 1rem 0;
