about page update

--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -12,22 +12,22 @@ block content
 
   .about
     .profile
-      img(src="https://via.placeholder.com/150", alt="Krystian Mowinski")
+      img(src="https://i.pravatar.cc/150?img=4", alt="Krystian Mowinski")
       h3 Krystian Mowinski
       p Krystian Mowinski is a dedicated content creator and editor who works tirelessly to ensure the website provides accurate and reliable information to users.
 
     .profile
-      img(src="https://via.placeholder.com/150", alt="Abdi")
+      img(src="https://i.pravatar.cc/150?img=2", alt="Abdi")
       h3 Abdi
       p Abdi is a skilled writer and editor who brings their expertise to create engaging content that keeps users coming back for more.
 
     .profile
-      img(src="https://via.placeholder.com/150", alt="Bayram Tosun")
+      img(src="https://i.pravatar.cc/150?img=3", alt="Bayram Tosun")
       h3 Bayram Tosun
       p bayram Tosun is a talented web developer who designed and built the website, ensuring it is user-friendly and easy to navigate.
 
     .profile
-      img(src="https://via.placeholder.com/150", alt="Nouha Lamrani")
+      img(src="https://i.pravatar.cc/150?img=1", alt="Nouha Lamrani")
       h3 Nouha Lamrani
       p Nouha Lamrani is a creative visionary who came up with the concept for the website and guided its development, ensuring it meets users' needs.
 
