--- a/src/views/update.pug
+++ b/src/views/update.pug
@@ -1,20 +1,20 @@
-extends layout.pug 
+extends layout.pug
 
 block head
   link(rel="stylesheet", href="/index.css")
   link(rel="stylesheet", href="/update.css")
-  //link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
 
 
-block content 
-    h2 Update the Database 
-    
-    form
-      .mb-3
-        label.form-label(for='exampleInputEmail1') Email address
-        input#exampleInputEmail1.form-control(type='email' aria-describedby='emailHelp')
-        #emailHelp.form-text We&apos;ll never share your email with anyone else.
-      .mb-3
-        label.form-label(for='exampleInputPassword1') Password
-        input#exampleInputPassword1.form-control(type='password')
-      button.btn.btn-primary(type='submit') Submit
+block content
+  .form-container
+    h2 Login
+
+    form(action='/login', method='POST')
+      .form-group
+        label(for='email') Email address
+        input#email(type='email', name='email', required)
+        #emailHelp We'll never share your email with anyone else.
+      .form-group
+        label(for='password') Password
+        input#password(type='password', name='password', required)
+      button(type='submit') Submit
