--- a/src/views/mixins/nav.pug
+++ b/src/views/mixins/nav.pug
@@ -5,4 +5,4 @@ mixin navigation
     a(href="/gallery") Gallery
     a(href="/cities") Data
     a(href="/about") About
-    a(href="/update") Update
+    a(href="/update") Login
