ive added a login register function

--- a/src/views/mixins/nav.pug
+++ b/src/views/mixins/nav.pug
@@ -6,3 +6,6 @@ mixin navigation
     a(href="/cities") Data
     a(href="/about") About
     a(href="/update") Update
+    a(href="/login") Login 
+    a(href="/register") Register
+    a(href="/account") Account
