--- a/src/views/update.pug
+++ b/src/views/update.pug
@@ -22,3 +22,6 @@ block content
       input(name='population', type='number', required)
 
       input(type='submit', value='Submit')
+      #successMessage.hidden
+        h3 Success!
+        p The country information has been successfully updated.
